cmake_minimum_required(VERSION 3.16)
project(examples_01)

set(CMAKE_CXX_STANDARD 14)

add_executable(examples_01 main.cpp CPlusLearning/com.FirstCapt/ListLearning.cpp CPlusLearning/com.FirstCapt/ListLearning.h CPlusLearning/com.FirstCapt/ArrayTests.cpp CPlusLearning/com.FirstCapt/ArrayTests.h CPlusLearning/com.FirstCapt/LinkTests.cpp CPlusLearning/com.FirstCapt/LinkTests.h CPlusLearning/com.FirstCapt/DLinkListTests.cpp CPlusLearning/com.FirstCapt/DLinkListTests.h CPlusLearning/com.SecondCapt/ArrayStackDemo.cpp CPlusLearning/com.SecondCapt/ArrayStackDemo.h)